Issue #23785: Fixed memory leak in TextIOWrapper.tell() in rare circumstances.